--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest --watchAll",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
@@ -16,11 +16,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/jest": "^29.5.14",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "expo": "^52.0.23",
     "expo-font": "~13.0.2",
     "expo-status-bar": "~2.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~52.0.2",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
@@ -34,5 +37,11 @@
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
+  }
 }
