--- a/package.json
+++ b/package.json
@@ -37,11 +37,5 @@
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^5.1.3"
   },
-  "private": true,
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
-    ]
-  }
+  "private": true
 }
