--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.9.0",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.0",
     "react-native-svg-transformer": "^1.0.0",
