--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~2.0.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
+    "jest-transformer-svg": "^2.0.2",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
