--- a/jest.config.json
+++ b/jest.config.json
@@ -6,7 +6,8 @@
   "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
   "testPathIgnorePatterns": [
     "./__tests__/mocks",
-    "./__tests__/utils"
+    "./__tests__/utils",
+    "./__tests__/coverage"
   ],
   "setupFiles": [
     "./__tests__/mocks/libs/async-storage.js", 
@@ -24,5 +25,6 @@
     "./src/@types",
     "./src/styles",
     "./src/libs/dayjs"
-  ]
+  ],
+  "coverageDirectory": "./__tests__/coverage"
 }
