--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
           node-version: 18.x
 
       - name: Install dependencies
-        run: npm install
+        run: npm install || npm install --legacy-peer-deps
+
       - name: Run Tests
         run: npm test
