--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,19 +8,19 @@ on:
 jobs:
   CI:
     name: Continuous Integration
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18.x
 
       - name: Install dependencies
-        run: npm install || npm install --legacy-peer-deps
+        run: npm install
 
       - name: Run Tests
         run: npm test
