--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
-
-      - name: Run Tests
-        run: npm test
