--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -19,18 +19,32 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies with fallback
+        run: |
+          npm install || npm install --legacy-peer-deps
 
       - name: Run Tests
         run: npm test
-  
-  CD: 
+
+  CD:
     name: Continuous Delivery
     runs-on: ubuntu-latest
-
     needs: CI
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+
+      - name: Install dependencies with fallback
+        run: |
+          npm install || npm install --legacy-peer-deps
+
+      - name: Build and Deploy
+        run: |
+          npm run build
+          # Add your deployment commands here
