--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -40,11 +40,12 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Install dependencies with fallback
-        run: |
-          npm install || npm install --legacy-peer-deps
-
-      - name: Build and Deploy
-        run: |
-          npm run build
-          # Add your deployment commands here
+      - name: Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          packager: npm
+          token: ${{ secrets.EAS_EXPO_TOKEN }}
+          
+      - name: Build
+        run: eas build --platform android --profile preview --non-interactive --no-wait
